--- a/src/IoTProtect/IoTProtect/Views/MainPage.xaml
+++ b/src/IoTProtect/IoTProtect/Views/MainPage.xaml
@@ -10,7 +10,7 @@
             ios:TabbedPage.TranslucencyMode="Opaque"
             BarBackgroundColor="Black">
     <TabbedPage.Children>
-        <NavigationPage Title="Browse">
+        <NavigationPage Title="Ανιχνευτές">
             <NavigationPage.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource">
                     <On Platform="iOS" Value="tab_feed.png" />
@@ -20,7 +20,7 @@
                 <views:IoTDevicesPage />
             </x:Arguments>
         </NavigationPage>
-        <NavigationPage Title="About">
+        <NavigationPage Title="Λογαριασμός">
             <NavigationPage.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource">
                     <On Platform="iOS" Value="tab_about.png" />
