--- a/src/IoTProtect/IoTProtect/App.xaml
+++ b/src/IoTProtect/IoTProtect/App.xaml
@@ -3,11 +3,46 @@
     <Application.Resources>
         <ResourceDictionary>
             <!--Global Styles-->
+
+            <!-- Colors -->
+            <Color x:Key="AppBackgroundColor">#131313</Color>
             <Color x:Key="NavigationPrimary">#131313</Color>
+
+            <!-- Implicit Styles -->
             <Style TargetType="NavigationPage">
                 <Setter Property="BarBackgroundColor" Value="{StaticResource NavigationPrimary}" />
                 <Setter Property="BarTextColor" Value="White" />
             </Style>
+            <Style TargetType="Entry">
+                <Setter Property="HeightRequest" Value="45" />
+                <Setter Property="FontSize"  Value="Body" />
+                <Setter Property="TextColor"  Value="White" />
+                <Setter Property="BackgroundColor"  Value="#454545" />
+            </Style>
+
+
+
+            <!--Explicit Styles -->
+            <Style x:Key="BaseButtonStyle" TargetType="Button">
+                <Setter Property="BorderColor" Value="#1a1a1a" />
+                <Setter Property="CornerRadius" Value="5" />
+                <Setter Property="TextColor" Value="White" />
+                <Setter Property="FontSize" Value="Body" />
+                <Setter Property="FontAttributes" Value="Bold" />
+                <Setter Property="BorderWidth" Value="1" />
+            </Style>
+            <Style x:Key="ButtonGreenStyle" TargetType="Button"
+                   BasedOn="{StaticResource BaseButtonStyle}">
+                <Setter Property="BackgroundColor" Value="#0F9F2A" />
+            </Style>
+            <Style x:Key="ButtonRedStyle" TargetType="Button"
+                   BasedOn="{StaticResource BaseButtonStyle}">
+                <Setter Property="BackgroundColor" Value="#e50914" />
+            </Style>
+            
+
+
+            <!--End Global Styles -->
         </ResourceDictionary>
     </Application.Resources>
 </Application>
