--- a/src/IoTProtect/IoTProtect/Views/MainPage.xaml
+++ b/src/IoTProtect/IoTProtect/Views/MainPage.xaml
@@ -17,7 +17,7 @@
                 </OnPlatform>
             </NavigationPage.Icon>
             <x:Arguments>
-                <views:IoTDevicesPage />
+                <views:DevicesPage />
             </x:Arguments>
         </NavigationPage>
         <NavigationPage Title="Λογαριασμός">
