--- a/src/IoTProtect/IoTProtect/App.xaml
+++ b/src/IoTProtect/IoTProtect/App.xaml
@@ -19,6 +19,10 @@
                 <Setter Property="TextColor"  Value="White" />
                 <Setter Property="BackgroundColor"  Value="#454545" />
             </Style>
+            <Style TargetType="Label">
+                <Setter Property="TextColor"  Value="White" />
+                <Setter Property="HorizontalTextAlignment"  Value="Center" />
+            </Style>
 
 
 
