device list and measurements UI

--- a/src/IoTProtect/IoTProtect/Views/DevicesListPage.xaml
+++ b/src/IoTProtect/IoTProtect/Views/DevicesListPage.xaml
@@ -9,7 +9,7 @@
     </ContentPage.BindingContext>
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Προσθήκη" Clicked="AddNewDeviceToolbarItem_Clicked"></ToolbarItem>
+        <ToolbarItem Text="+" Clicked="AddNewDeviceToolbarItem_Clicked"></ToolbarItem>
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
@@ -32,11 +32,41 @@
                                     <SwipeItem Text="Διαγραφή" BackgroundColor="Red" Command="{Binding Source={x:Reference CurrentInvoicesListPage}, Path=BindingContext.DeleteInvoiceCommand}" CommandParameter="{Binding}"></SwipeItem>
                                 </SwipeView.RightItems>
                                 -->
-                                <StackLayout Orientation="Vertical">
-                                    <Label Text="DEVICE" BackgroundColor="Transparent" TextColor="White" />
-                                    <Label Text="{Binding Name}" BackgroundColor="Transparent" TextColor="White" />
-                                    <Label Text="{Binding LatestMeasurement.Photoresistor}" BackgroundColor="Transparent" TextColor="White" />
-                                </StackLayout>
+                                <Grid RowSpacing="2">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="*" />
+                                        <RowDefinition Height="*" />
+                                        <RowDefinition Height="*" />
+                                        <RowDefinition Height="*" />
+                                        <RowDefinition Height="*" />
+                                        <RowDefinition Height="*" />
+                                        <RowDefinition Height="2" />
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+
+                                    <Label Text="Τοποθεσία:" Grid.Column="0" Grid.Row="0" Margin="10,10,0,0" HorizontalTextAlignment="End" VerticalTextAlignment="Center" TextColor="Gray" FontSize="Medium" />
+                                    <Label Text="{Binding Place}" Grid.Column="1" Grid.Row="0" Margin="0,10,0,0" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" FontSize="Medium" />
+
+                                    <Label Text="Θέση:" Grid.Column="0" Grid.Row="1" Margin="10,0,0,0" HorizontalTextAlignment="End" VerticalTextAlignment="Center" TextColor="Gray" FontSize="Medium" />
+                                    <Label Text="{Binding Location}" Grid.Column="1" Grid.Row="1" Margin="0,0,0,0" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" FontSize="Medium" />
+
+                                    <Label Text="Photoresistor:" Grid.Column="0" Grid.Row="2" Margin="10,0,0,0" HorizontalTextAlignment="End" VerticalTextAlignment="Center" TextColor="Gray" FontSize="Medium" />
+                                    <Label Text="{Binding LatestMeasurement.Photoresistor}" Grid.Column="1" Grid.Row="2" Margin="0,0,0,0" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" FontSize="Medium" />
+
+                                    <Label Text="Ημερομηνία:" Grid.Column="0" Grid.Row="3" Margin="10,0,0,0" HorizontalTextAlignment="End" VerticalTextAlignment="Center" TextColor="Gray" FontSize="Medium" />
+                                    <Label Text="{Binding LatestMeasurement.CreatedAtLocalDateTime}" Grid.Column="1" Grid.Row="3" Margin="0,0,0,0" LineBreakMode="TailTruncation" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" FontSize="Medium" />
+
+                                    <Label Text="Μπαταρία:" Grid.Column="0" Grid.Row="4" Margin="10,0,0,0" HorizontalTextAlignment="End" VerticalTextAlignment="Center" TextColor="Gray" FontSize="Medium" />
+                                    <Label Text="3.76v  -  94%" Grid.Column="1" Grid.Row="4" Margin="0,0,0,0" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" FontSize="Medium" />
+
+                                    <Label Text="Firmware:" Grid.Column="0" Grid.Row="5" Margin="10,0,0,0" HorizontalTextAlignment="End" VerticalTextAlignment="Center" TextColor="Gray" FontSize="Medium" />
+                                    <Label Text="v1.0  -  (Ενημέρωση διαθέσιμη)" Grid.Column="1" Grid.Row="5" Margin="0,0,0,0" LineBreakMode="TailTruncation" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" FontSize="Medium" />
+
+                                    <BoxView Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="6" HeightRequest="1" BackgroundColor="LightSteelBlue" />
+                                </Grid>
 
                                 <VisualStateManager.VisualStateGroups>
                                     <VisualStateGroup Name="CommonStates">
