--- a/src/IoTProtect/IoTProtect/Views/DeviceMeasurementsPage.xaml
+++ b/src/IoTProtect/IoTProtect/Views/DeviceMeasurementsPage.xaml
@@ -14,7 +14,7 @@
 
                 <CollectionView
                     x:Name="DeviceMeasurementsCollectionView"
-                    SelectionMode="Single"
+                    SelectionMode="None"
                     SelectionChanged="DeviceMeasurementsCollectionView_SelectionChanged"
                     ItemsSource="{Binding ItemsList}"
                     VerticalOptions="FillAndExpand"
@@ -23,11 +23,29 @@
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
 
-                            <StackLayout Orientation="Vertical">
-                                <Label Text="DEVICE" BackgroundColor="Transparent" TextColor="White" />
-                                <Label Text="{Binding Name}" BackgroundColor="Transparent" TextColor="White" />
-                                <Label Text="{Binding LatestMeasurement.Photoresistor}" BackgroundColor="Transparent" TextColor="White" />
-                            </StackLayout>
+                            <Grid RowSpacing="2">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="2" />
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+
+                                <Label Text="Photoresistor:" Grid.Column="0" Grid.Row="0" Margin="10,10,0,0" HorizontalTextAlignment="End" VerticalTextAlignment="Center" TextColor="Gray" FontSize="Medium" />
+                                <Label Text="{Binding Photoresistor}" Grid.Column="1" Grid.Row="0" Margin="0,10,0,0" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" FontSize="Medium" />
+
+                                <Label Text="Ημερομηνία:" Grid.Column="0" Grid.Row="1" Margin="10,0,0,0" HorizontalTextAlignment="End" VerticalTextAlignment="Center" TextColor="Gray" FontSize="Medium" />
+                                <Label Text="{Binding CreatedAtLocalDateTime}" Grid.Column="1" Grid.Row="1" Margin="0,0,0,0" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" FontSize="Medium" />
+
+                                <Label Text="ID:" Grid.Column="0" Grid.Row="2" Margin="10,0,0,0" HorizontalTextAlignment="End" VerticalTextAlignment="Center" TextColor="Gray" FontSize="Medium" />
+                                <Label Text="{Binding ID}" Grid.Column="1" Grid.Row="2" Margin="0,0,0,0" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" FontSize="Medium" />
+
+                                <BoxView Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="3" HeightRequest="1" BackgroundColor="LightSteelBlue" />
+                            </Grid>
 
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
